# rag-suite

./: .gitignore  AGENTS.md  README.md  basic-rag-arch-and-interface-design.md  chapter-5.md  daily-development-report.md  data-rag-arch-and-interface-design.md  designing-ai-systems-chaper5.md  docker-compose.yml  documents-parse-clean-interface-design.md  main.py  pdf-rag-mvp-interface-design.md  prd.md  pyproject.toml
.github/workflows/: ci.yml
claw/: README.md  __init__.py  claw.py  run_local.py
claw/knowledge_base/: company-handbook.md  engineering-runbook.md
dashboards/: __init__.py
dashboards/experiments/: __init__.py  app.py
dashboards/observability/: __init__.py  app.py
docker/: data.Dockerfile  experiments.Dockerfile  experiments_dashboard.Dockerfile  gateway.Dockerfile  guardrails.Dockerfile  models.Dockerfile  observability.Dockerfile  observability_dashboard.Dockerfile  sessions.Dockerfile  tools.Dockerfile  workflow.Dockerfile
examples/: _bootstrap.py  live_stack_smoke.py  quickstart_experiments.py  quickstart_observability.py  quickstart_observability_walkthrough.py  test_experiments_service.py  test_observability_service.py
genai_platform/: __init__.py  cli.py  grpc_retry.py  platform.py
genai_platform/cli/: deploy.py
genai_platform/clients/: __init__.py  experiments.py  observability.py
proto/: experiments.proto  experiments_pb2.py  experiments_pb2_grpc.py  observability.proto  observability_pb2.py  observability_pb2_grpc.py
research/: README.md  ocr-embedding-technical-research.md  rag-pipeline-research-summary.md  rag-pipeline-research.md  vector-db-tuning-parameters.md
services/data/: external_vector_store.py  main.py  pgvector_store.py  search.py  store.py  vector_backends.py
services/experiments/: __init__.py  ab_testing.py  evaluation.py  main.py  models.py  postgres_store.py  schema.sql  scorers.py  service.py  store.py
services/gateway/: README.md  grpc_proxy.py  main.py  registry.py  servers.py
services/models/: README.md  main.py  metrics_publisher.py  service.py
services/models/embedding_providers/: __init__.py  local_provider.py
services/observability/: __init__.py  main.py  metrics.py  models.py  postgres_store.py  schema.sql  service.py  store.py
services/sessions/: README.md
services/shared/: README.md  observability_client.py  server.py  traced_service.py
tests/: test_claw.py  test_cli.py  test_dashboard_apptest.py  test_dashboard_helpers.py  test_data_search.py  test_experiment_assignment.py  test_experiments_models.py  test_experiments_postgres_store.py  test_experiments_service.py  test_experiments_store.py  test_external_vector_store.py  test_live_stack_smoke.py  test_metrics_publisher.py  test_model_embed.py  test_model_traced.py  test_observability_client.py  test_observability_models.py  test_observability_postgres_store.py  test_observability_service.py  test_observability_store.py  test_offline_evaluation.py  test_scorers.py  test_sdk_gateway_smoke.py  test_traced_service.py  test_walkthrough_shape.py  test_workflow_deploy_cli.py
